# ddclient

./: .autom4te.cfg  .cvsignore  .envrc  .gitignore  CONTRIBUTING.md  COPYING  COPYRIGHT  ChangeLog  ChangeLog.md  Changelog  Changelog.old  Makefile.am  NEWS.md  README  README.cisco  README.md  README.md~  README.ssl  RELEASENOTE  TODO  WHATSNEW  autogen  configure.ac  ddclient  ddclient-snap-wrapper  ddclient.conf.in  ddclient.conf.sample  ddclient.in  ddclient.orig  ddclient.template  ddclient~  get-ip-from-fritzbox  install.sh  sample-ddclient-wrapper.sh  sample-duckdns-etc_ddclient.conf  sample-etc_cron.d_ddclient  sample-etc_ddclient.conf  sample-etc_dhclient-exit-hooks  sample-etc_ppp_ip-up.local  sample-etc_rc.d_ddclient.freebsd  (+8 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  makefile.yml  package-deb.yml  package-rpm.yml  pr.yml
.github/workflows/scripts/: dist-tarball-check
build-aux/snap/: snapcraft.yaml
build-aux/snap/hooks/: install
docs/: Packaging.md  ProviderGuidelines.md  ipv6-design-doc.md  protocol-dnspod.md
html/: ddclient.css  doc.php  faq.php  home.php  index.php  protocol.php  router.php  sinorca-print.css  sinorca-screen-alt.css  sinorca-screen.css  todo.txt  xml.php
packaging/debian/: changelog  control  copyright  rules
packaging/rpm/: ddclient.spec
patches/: 3com-oc-remote812.patch  cisco-asa.patch  ddclient-noip.patch  ddclient.daemon-timeout.patch  easydns.patch  eurodns.patch  foreground.patch  freedns-patch  loopia.patch  mail-on-kill.patch  multiple-ip.patch  namecheap.patch  no-host.patch  password.patch  prevent-hang.patch  readme.patch  regex_vlan.patch  typo_dnspark.patch
patches/debianpatches/: abuse_msg.diff  cachedir.diff  cisco_fw.diff  config_path.diff  daemon_check.diff  ip-up_run-parts.diff  maxinterval.diff  readme.txt  smc-barricade-7401bra.patch  smc-barricade-fw-alt.diff  update-new-config.patch
patches/ubuntu/: checked_ssl_load.diff  daemon_interval.diff  default-timeout.patch  dyndns_com.diff  series  smc-barricade-fw-alt.diff
release/: readme.txt
svn/: Changelog  README  README.ssl  ddclient  sample-etc_ddclient.conf  sample-etc_rc.d_init.d_ddclient.lsb  sample-etc_rc.d_init.d_ddclient.redhat
svn/patches/: create_patch.sh  opendns.patch  readme.patch  regex_vlan.patch  typo_namecheap_patch.diff.new
svn/patches/debianpatches/: daemon_interval.diff  help_nonroot(2).diff  sample_path.diff
svn/patches/ubuntu/: config_path.diff  sample_ubuntu.diff
t/: aws_signed_request.pl  builtinfw_query.pl  check_value.pl  dnsexit2.pl  get_ip_from_if.pl  geturl_connectivity.pl  geturl_connectivity.pl.in  geturl_response.pl  geturl_ssl.pl  group_hosts_by.pl  header_ok.pl  interval_expired.pl  is-and-extract-ipv4.pl  is-and-extract-ipv6-global.pl  is-and-extract-ipv6.pl  jitter.pl  logmsg.pl  parse_assignments.pl  protocol_1984.pl  protocol_alicloud.pl  protocol_arvancloud.pl  protocol_asuscomm.pl  protocol_bunny.pl  protocol_celeros.pl  protocol_cloudflare.pl  protocol_ddnss.pl  protocol_directnic.pl  protocol_dnsexit2.pl  protocol_dnspod.pl  protocol_dreamhost.pl  protocol_dynadot.pl  protocol_dyndns2.pl  protocol_dynu.pl  protocol_glesys.pl  protocol_hetzner.pl  protocol_hosttech.pl  protocol_ionos.pl  protocol_namecom.pl  protocol_namesilo.pl  protocol_netcup.pl  (+16 more)
t/lib/Devel/: Autoflush.pm
t/lib/ddclient/: t.pm
t/lib/ddclient/Test/Fake/: HTTPD.pm
t/lib/ddclient/Test/Fake/HTTPD/: dummy-ca-cert.pem  dummy-server-cert.pem  dummy-server-key.pem  other-ca-cert.pem
t/lib/ddclient/t/: HTTPD.pm  Logger.pm  ip.pm
